# untrunc

./: build.gradle  codec.cpp  local.properties  main.cpp  makreleaseaar.sh  mp4.cpp  mp4.h  proguard-rules.pro  settings.gradle
app/: build.gradle
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt
app/src/main/java/com/hejunsaturday/videoinpainting/: VideoUntrunc.java
gradle/wrapper/: gradle-wrapper.properties
src/main/cpp/: CMakeLists.txt
src/main/java/com/saturday/videoinpainting/: onJniCall.java
src/main/jni/impl/: com_hejunsaturday_videoinpainting_VideoUntrunc.cpp
src/main/jni/include/: com_hejunsaturday_videoinpainting_VideoUntrunc.h
src/main/res/values/: colors.xml  strings.xml
